2013-03-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/call-rsa.c (rsa_sign): Follow change of API.
	(modulus_calc, rsa_decrypt, rsa_verify): Likewise.
	* src/openpgp-do.c (encrypt, decrypt): Likewise.

	* polarssl/include/polarssl/aes.h: Updated from PolarSSL 1.2.6.
	* polarssl/library/aes.c: Ditto.
	* polarssl/include/polarssl/rsa.h: Ditto.
	* polarssl/library/rsa.c: Ditto.
	* polarssl/include/polarssl/bignum.h: Ditto.
	* polarssl/library/bignum.c: Ditto.
	* polarssl: Move from polarssl-0.14.0, and needed files only.

2013-03-15  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/regnual.ld (.bss): Put at RAM1.  This makes reGNUal can
	be loaded on the lower address.

	* regnual/sys.c (entry): Don't change SP.  Put alignment.

	* regnual/regnual.c (usb_cb_get_descriptor): Fix adding break.

2013-03-14  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (stlinkv2.start): Call write_debug_reg to run
	the core again.

2013-03-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in (__process_stack_size__): Increase (was: 0x200).

	* tool/stlinkv2.py (stlinkv2.exit_from_debug_swd)
	(stlinkv2.exit_from_debug_swim): New.
	(stlinkv2.start): Call exit_from_debug_swd or
	exit_from_debug_swim.

2013-03-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_do_public_key): Add OID for ECDSA.
	(gpg_do_write_prvkey): Add PUBKEY_LEN for ECDSA.

	* src/flash.c (flash_key_write): Argument change for ECDSA key.

	* src/main.c (calculate_regnual_entry_address): New.
	(main): Use calculate_regnual_entry_address for entry point.

	* src/openpgp-do.c (gpg_do_write_prvkey): Coerce KDI.DATA to
	uint8_t *.

	* src/usb_stm32f103.c (handle_setup0): Fix selecting handler.

2013-03-08  Niibe Yutaka  <gniibe@fsij.org>

	Relocatable reGNUal.

	* regnual/regnual.ld (MEMORY): 0x1400 was the value of Gnuk 1.0.1.
	Keep this value.
	(.text): Include .text.entry next to the .vectors.
	(.got): New.

	* regnual/sys.c (entry): Now, it's at .text.entry section.
	Do relocations.